--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ android.enableJetifier=false
 # Allow Gradle to use up to 1 GB of RAM
 org.gradle.jvmargs=-Xmx1024M
 
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+# org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
 
 android.nonTransitiveRClass=false
